--- a/src/style/forms.scss
+++ b/src/style/forms.scss
@@ -87,7 +87,7 @@ form {
     }
 
     *:last-child {
-      margin-bottom: 0px !important;
+      margin-bottom: 0px;
     }
 
     .ant-form-item-extra {
